--- a/NROMANCHUKATQA-2020/pom.xml
+++ b/NROMANCHUKATQA-2020/pom.xml
@@ -36,6 +36,11 @@
             <version>6.14.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+        </dependency>
 
     </dependencies>
     <build>
